# Hackathon-demo

./: .env.example  README.md  chainlit_app.py  pyproject.toml  requirements.txt
src/chainlit/: app.py
src/core/: dataset_loader.py  match_scorer_agent.py  orchestrator.py  profile_reader_agent.py  redflag_agent.py  room_matcher_agent.py  setup_config.py  wingman_agent.py
src/core/apis/: geocode.py  places.py
src/data/: pakistan_roommate_profile.json
